atualização - listagem de usuários

--- a/professor/usuarios/index.html
+++ b/professor/usuarios/index.html
@@ -96,10 +96,10 @@
             <h1>USUÁRIOS EXISTENTES</h1>
 
             <div class="tipo_usuario">
-                <ul>
-                    <li data-tabs="todos" class="ativo">TODOS</li>
-                    <li data-tabs="mensal">ALUNO</li>
-                    <li data-tabs="anual">AVALIADOR</li>
+                <ul id="ul_tipo_usuario">
+                    <li id="li_todos" data-tabs="todos" class="ativo">TODOS</li>
+                    <li id="li_alunos" data-tabs="aluno">ALUNO</li>
+                    <li id="li_avaliadores" data-tabs="avaliador">AVALIADOR</li>
                 </ul>
             </div>
 
