listagem usuários - professor

--- a/professor/usuarios/index.html
+++ b/professor/usuarios/index.html
@@ -104,8 +104,8 @@
             </div>
 
             <div class="space">
-                <ul class="list-group ul">
-                    <li class="list-group-item li" onclick="showModal()">
+                <ul id="ul_membros" class="list-group ul">
+                    <!-- <li class="list-group-item li" onclick="showModal()">
                         <div class="usuario">
                             <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                                 data-width="100" data-height="100"></span>
@@ -173,7 +173,7 @@
                         </div>
 
                         <h2 id="txtTipoUsuario">ALUNO</h2>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
