--- a/instituicao/usuarios/index.html
+++ b/instituicao/usuarios/index.html
@@ -20,8 +20,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/css/select2.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js"></script>
-    <link rel="stylesheet" href="../componentes/side_menu/styles_side_menu.css">
-    <link rel="shortcut icon" href="../../home/images-global/logo-azul.svg" type="image/x-icon">
+    <link rel="stylesheet" href="../componentes/side_menu/styles_side_menu.css" />
+    <link rel="shortcut icon" href="../../home/images-global/logo-azul.svg" type="image/x-icon" />
 
     <script src="./modal.js" defer></script>
     <script src="./script.js" defer></script>
@@ -116,77 +116,61 @@
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
-
                         <h2>PROFESSOR</h2>
                     </li>
-
                     <img src="./img/Line.svg" alt="" />
-
                     <li class="list-group-item li" onclick="showModalListagem()">
                         <div class="usuario">
                             <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
-
                         <h2>PROFESSOR</h2>
                     </li>
-
                     <img src="./img/Line.svg" alt="" />
-
                     <li class="list-group-item li" onclick="showModalListagem()">
                         <div class="usuario">
                             <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
-
                         <h2>PROFESSOR</h2>
                     </li>
-
                     <img src="./img/Line.svg" alt="" />
-
                     <li class="list-group-item li" onclick="showModalListagem()">
                         <div class="usuario">
                             <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
-
                         <h2>PROFESSOR</h2>
                     </li>
-
                     <img src="./img/Line.svg" alt="" />
-
                     <li class="list-group-item li" onclick="showModalListagem()">
                         <div class="usuario">
                             <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
-
                         <h2>PROFESSOR</h2>
                     </li>
-
                     <img src="./img/Line.svg" alt="" />
-
                     <li class="list-group-item li" onclick="showModalListagem()">
                         <div class="usuario">
                             <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
-
                         <h2>PROFESSOR</h2>
                     </li> -->
                 </ul>
             </div>
             <div class="buttonAddUsuario">
-                <button onclick="showModal()" type="button" class="addUsuario button5">
-                    <i class="fa fa-plus" style="font-size: 36px"></i></button>
+                <button onclick="showModal(), getArrayCursosProfessor()" type="button" class="addUsuario button5">
+                    <i class="fa fa-plus" style="font-size: 36px"></i>
+                </button>
             </div>
         </div>
-
 
         <div id="container_usuario" class="container mt-5 container modal modal-listagem">
             <h1>USUÁRIO</h1>
@@ -226,8 +210,6 @@
                     <input id="view_user_grupo" type="text" class="form-control turma" disabled />
                 </div>
             </form>
-
-            <div class="buttons" id="div-btn-user-options"></div>
         </div>
 
         <div class="container mt-5 container modal modal-editar" id="modal-editar">
@@ -235,31 +217,32 @@
             <form class="row g-7">
                 <div class="col-md-6 lab-inp icon-edit">
                     <label for="nome_do_usuario" class="form-label">Nome do usuário</label>
-                    <input id="edit_user_nome" type="text" class="form-control nome_do_usuario"/>
+                    <input type="text" class="form-control nome_do_usuario" placeholder="unicuritiba@gmail.com" />
                     <i class="fa fa-edit" style="font-size: 24px"></i>
                 </div>
 
                 <div class="col-md-6 lab-inp icon-edit">
                     <label for="email_usuario" class="form-label">Email do usuário</label>
-                    <input id="edit_user_email" type="email" class="form-control email_usuario"/>
+                    <input type="email" class="form-control email_usuario" placeholder="Universidade De Curitiba " />
                     <i class="fa fa-edit" style="font-size: 24px"></i>
                 </div>
 
                 <div class="col-md-6 lab-inp icon-edit">
                     <label for="senha" class="form-label">Senha</label>
-                    <input id="edit_user_senha" type="password" class="form-control senha"/>
+                    <input type="password" class="form-control senha" placeholder="42.591.538/0001-68" />
                     <i class="fa fa-edit" style="font-size: 24px"></i>
                 </div>
 
                 <div class="col-md-6 lab-inp">
                     <label for="tipo-select" class="form-label">Tipo</label>
-                    <input id="edit_user_tipo" type="text" class="form-control tipo" disabled/>
-                    <i class="fa fa-edit" style="font-size: 24px"></i>
+                    <select class="form-select tipo-select" id="tipo-select-edit" onChange="deletarCampo()">
+                        <option selected>Professor</option>
+                    </select>
                 </div>
 
                 <div class="col-md-6 lab-inp" id="curso">
                     <label for="tipo-select" class="form-label">Curso</label>
-                    <select id="edit_user_curso" class="form-select mul-select" multiple="true">
+                    <select class="form-select mul-select" multiple="true">
                         <option value="Cambodia">Cambodia</option>
                         <option value="Khmer">Khmer</option>
                         <option value="Thiland">Thiland</option>
@@ -272,20 +255,7 @@
 
                 <div class="col-md-6 lab-inp" id="turma">
                     <label for="tipo-select" class="form-label">Turma</label>
-                    <select id="edit_user_turma" class="mul-select" multiple="true">
-                        <option value="Cambodia">Cambodia</option>
-                        <option value="Khmer">Khmer</option>
-                        <option value="Thiland">Thiland</option>
-                        <option value="Koren">Koren</option>
-                        <option value="China">China</option>
-                        <option value="English">English</option>
-                        <option value="USA">USA</option>
-                    </select>
-                </div>
-
-                <div class="col-md-6 lab-inp" id="grupo">
-                    <label for="tipo-select" class="form-label">GRUPO</label>
-                    <select id="edit_user_grupo" class="mul-select" multiple="true">
+                    <select class="mul-select" multiple="true">
                         <option value="Cambodia">Cambodia</option>
                         <option value="Khmer">Khmer</option>
                         <option value="Thiland">Thiland</option>
@@ -303,7 +273,9 @@
                 </script>
                 <div class="buttons">
                     <div class="col-md-3">
-                        <button class="primeiro_botao" type="button" id="btn-cancelar-editar">CANCELAR</button>
+                        <button class="primeiro_botao" type="button" onclick="showModalListagem()">
+                            CANCELAR
+                        </button>
                     </div>
 
                     <div class="col-md-3">
@@ -327,136 +299,126 @@
                 </div>
 
                 <div class="col-md-6">
-                    <button id="btn-editar-usuario" class="terceiro_botao" type="button">CONFIRMAR</button>
+                    <button class="terceiro_botao" type="button" onclick="exitchangeModalExcluir()">
+                        CONFIRMAR
+                    </button>
                 </div>
             </div>
         </div>
 
         <div class="container mt-5 container modal modal-cadastro" id="modal">
-            <h1>CADASTRAR NOVO USUÁRIO</h1>
-            <form class="row g-7" id="modal-form">
+            <h1>NOVO USUÁRIO</h1>
+            <form class="row g-7">
+                <div class="col-md-6 lab-inp icon-edit">
+                    <label for="nome_do_usuario" class="form-label">Nome:</label>
+                    <input type="text" class="form-control nome_do_usuario" id="inputNomeNovoUsuarioModal"
+                        maxlength="255" />
+                </div>
 
+                <div class="col-md-6 lab-inp icon-edit">
+                    <label for="email_usuario" class="form-label">Email:</label>
+                    <input type="email" class="form-control email_usuario" id="inputEmailNovoUsuarioModal"
+                        maxlength="255" />
+                </div>
+
+                <div class="col-md-6 lab-inp icon-edit">
+                    <label for="senha" class="form-label">Senha:</label>
+                    <input type="text" class="form-control senha" id="inputSenhaNovoUsuarioModal"
+                        placeholder="A SENHA SERÁ ENVIADA NO EMAIL DO USUÁRIO" disabled maxlength="255" />
+                </div>
+
+                <div class="col-md-6 lab-inp">
+                    <label for="tipo-select" class="form-label">Tipo:</label>
+                    <select class="form-select tipo-select" id="tipo-select-criar">
+                        <option disabled="disabled" selected>
+                            SELECIONE O TIPO DO USUÁRIO
+                        </option>
+                        <option value="1">Professor</option>
+                    </select>
+                </div>
+
+                <div class="col-md-6 lab-inp" id="cursoNovoUsuario">
+                    <label for="tipo-select" class="form-label">Curso:</label>
+                    <select class="form-select mul-select" multiple="true" id="cursoNovoUsuarioModal"></select>
+                </div>
+
+                <div class="col-md-6 lab-inp" id="turmaNovoUsuario">
+                    <label for="tipo-select" class="form-label">Turma:</label>
+                    <select class="mul-select" multiple="true" id="turmaNovoUsuarioModal"></select>
+                </div>
+
+                <script>
+                    $(document).ready(function () {
+                        $(".mul-select").select2({});
+                    });
+                </script>
+
+                <div class="buttons">
+                    <div class="col-md-3">
+                        <button class="primeiro_botao" type="button" onclick="exitModal()">
+                            CANCELAR
+                        </button>
+                    </div>
+
+                    <div class="col-md-3">
+                        <button class="segundo_botao" type="submit" id="salvarAvaliador" onclick="cadastrarProfessor()">
+                            SALVAR
+                        </button>
+                    </div>
+                </div>
+            </form>
+
+            <!-- <h1>CADASTRAR NOVO USUÁRIO</h1>
+            <form class="row g-7" id="modal-form">
                 <div class="col-md-6 lab-inp">
                     <label for="nome_do_usuario" class="form-label">Nome do usuário</label>
                     <input type="text" class="form-control nome_do_usuario">
                 </div>
-
                 <div class="col-md-6 lab-inp">
                     <label for="email_usuario" class="form-label">Email do usuário</label>
                     <input type="email" class="form-control email_usuario">
                 </div>
-
                 <div class="col-md-6 lab-inp">
                     <label for="senha" class="form-label">Senha</label>
                     <input type="password" class="form-control senha"
                         placeholder="*A SENHA SERÁ ENVIADA NO E-MAIL DO USUÁRIO" disabled>
                 </div>
-
                 <div class="col-md-6 lab-inp">
                     <label for="tipo-select" class="form-label">Tipo</label>
                     <select class="form-select tipo-select" on="" id="tipo-select-criar"
                         onChange="deletarCampoCadastro(); disableSelected()">
-                        <option value="selected" disabled="disabled" selected>SELECIONE O TIPO DE USUÁRIO</option>
-                        <option value="1">Professor</option>
-                        <option value="2">Aluno</option>
-                        <option value="3">Avaliador</option>
+                        <option value="1" disabled="disabled" selected>Professor</option>
                     </select>
                 </div>
-
                 <div class="col-md-6 lab-inp" id="curso-cadastro">
                     <label for="tipo-select" class="form-label">Curso</label>
-                    <select disabled class="form-select mul-select" id="input-curso" multiple="true">
-                        <option value="Cambodia">Cambodia</option>
-                        <option value="Khmer">Khmer</option>
-                        <option value="Thiland">Thiland</option>
-                        <option value="Koren">Koren</option>
-                        <option value="China">China</option>
-                        <option value="English">English</option>
-                        <option value="USA">USA</option>
+                    <select class="form-select mul-select" id="input-curso" multiple="true">
                     </select>
                 </div>
-
                 <div class="col-md-6 lab-inp" id="turma-cadastro">
                     <label for="tipo-select" class="form-label">Turma</label>
-                    <select disabled class="form-select mul-select" id="input-turma" multiple="true">
-                        <option value="Cambodia">Cambodia</option>
-                        <option value="Khmer">Khmer</option>
-                        <option value="Thiland">Thiland</option>
-                        <option value="Koren">Koren</option>
-                        <option value="China">China</option>
-                        <option value="English">English</option>
-                        <option value="USA">USA</option>
+                    <select class="form-select mul-select" id="input-turma" multiple="true">
                     </select>
                 </div>
-
-                <div class="col-md-6 lab-inp" id="grupo-cadastro">
-                    <label for="tipo-select" class="form-label">Grupo</label>
-                    <select class="mul-select" multiple="true">
-                        <option value="Cambodia">Cambodia</option>
-                        <option value="Khmer">Khmer</option>
-                        <option value="Thiland">Thiland</option>
-                        <option value="Koren">Koren</option>
-                        <option value="China">China</option>
-                        <option value="English">English</option>
-                        <option value="USA">USA</option>
-                    </select>
-                </div>
-
-
-                <div class="col-md-4 lab-inp" id="curso-aluno-cadastro">
-                    <label for="tipo-select" class="form-label">Curso</label>
-                    <select class="form-select tipo-select" id="curso-select-cadastro">
-                        <option selected></option>
-                        <option value="1">Professor</option>
-                        <option value="2">Aluno</option>
-                        <option value="3">Avaliador</option>
-                    </select>
-                </div>
-
-                <div class="col-md-4 lab-inp" id="turma-aluno-cadastro">
-                    <label for="tipo-select" class="form-label">Turma</label>
-                    <select class="form-select tipo-select" id="turma-select-cadastro">
-                        <option selected></option>
-                        <option value="1">Professor</option>
-                        <option value="2">Aluno</option>
-                        <option value="3">Avaliador</option>
-                    </select>
-                </div>
-
-                <div class="col-md-4 lab-inp" id="grupo-aluno-cadastro">
-                    <label for="tipo-select" class="form-label">Grupo</label>
-                    <select class="form-select tipo-select" id="grupo-select-cadastro">
-                        <option selected></option>
-                        <option value="1">Professor</option>
-                        <option value="2">Aluno</option>
-                        <option value="3">Avaliador</option>
-                    </select>
-                </div>
-
                 <script>
                     $(document).ready(function () {
                         $(".mul-select").select2({
-
                         });
                     })
                 </script>
-
                 <div class="buttons">
-
                     <div class="col-md-3">
                         <button class="primeiro_botao" type="button" onclick="exitModal()">CANCELAR</button>
                     </div>
-
                     <div class="col-md-3">
                         <button class="segundo_botao" id="button_salvar" type="button"
-                            onclick="resetForm()">SALVAR</button>
+                            onclick="resetForm(), cadastrarProfessor()">SALVAR</button>
                     </div>
                     <div class="col-md-6 msg-div">
                         <p class="msg">**USUÁRIO CADASTRADO COM SUCESSO</p>
                     </div>
                 </div>
-            </form>
-
+            </form> -->
         </div>
     </div>
 </body>
