--- a/instituicao/perfil/editar/index.html
+++ b/instituicao/perfil/editar/index.html
@@ -7,13 +7,13 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
   <link rel="stylesheet" href="style.css" />
-  <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+  <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Righteous&display=swap"
     rel="stylesheet" />
-    <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
+  <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script type="text/javascript" src="../../../jquery/jquery-3.3.1.min.js"></script>
@@ -23,78 +23,77 @@
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
   <script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.maskedinput/1.3.1/jquery.maskedinput.js"></script>
   <link rel="stylesheet" href="../../componentes/header/styles_header.css" />
-  <link rel="stylesheet" href="../../componentes/side_menu/styles_side_menu.css">
-  <link rel="shortcut icon" href="../../../home/images-global/logo-azul.svg" type="image/x-icon">
+  <link rel="stylesheet" href="../../componentes/side_menu/styles_side_menu.css" />
+  <link rel="shortcut icon" href="../../../home/images-global/logo-azul.svg" type="image/x-icon" />
   <script defer src="./script.js"></script>
 
   <title>Editar Perfil</title>
 </head>
 
 <body>
-
   <header>
     <div class="primeira_parte">
-        <img src="../../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
-        <h1 id="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
+      <img src="../../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
+      <h1 id="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
     </div>
-  
+
     <a href="../../index.html">
-        <img src="../../componentes/header/img/perfil_instituicao.svg" alt="perfil" />
+      <img src="../../componentes/header/img/perfil_instituicao.svg" alt="perfil" />
     </a>
   </header>
 
-<div class="sidebar">
-  <div class="logo-details">
+  <div class="sidebar">
+    <div class="logo-details">
       <img class="icon" src="../../../home/images-global/logo-branca.svg" alt="logo" />
       <i class="bx bx-menu" id="btn"></i>
+    </div>
+    <li>
+      <a href="../../cursos/index.html">
+        <i class="bx bx-group"></i>
+        <span class="links_name">Cursos existentes</span>
+      </a>
+      <span class="tooltip">Cursos</span>
+    </li>
+    <li>
+      <a href="../../usuarios/index.html">
+        <i class="bx bx-user"></i>
+        <span class="links_name">Usuários cadastrados</span>
+      </a>
+      <span class="tooltip">Usuários</span>
+    </li>
+    <li>
+      <a href="#">
+        <i class="bx bx-edit"></i>
+        <span class="links_name">Formulário da banca</span>
+      </a>
+      <span class="tooltip">Avaliações</span>
+    </li>
+    <li class="profile">
+      <a onclick="logout()">
+        <i class="bx bx-log-out" id="log_out"></i>
+        <span class="links_name">Log Out</span>
+      </a>
+      <span class="tooltip">Log Out</span>
+    </li>
   </div>
-      <li>
-          <a href="../../cursos/index.html">
-              <i class="bx bx-group"></i>
-              <span class="links_name">Cursos existentes</span>
-          </a>
-          <span class="tooltip">Cursos</span>
-      </li>
-      <li>
-          <a href="../../usuarios/index.html">
-              <i class="bx bx-user"></i>
-              <span class="links_name">Usuários cadastrados</span>
-          </a>
-          <span class="tooltip">Usuários</span>
-      </li>
-      <li>
-          <a href="#">
-              <i class="bx bx-edit"></i>
-              <span class="links_name">Formulário da banca</span>
-          </a>
-          <span class="tooltip">Avaliações</span>
-      </li>
-      <li class="profile">
-          <a onclick="logout()">
-              <i class="bx bx-log-out" id="log_out"></i>
-              <span class="links_name">Log Out</span>
-          </a>
-          <span class="tooltip">Log Out</span>
-      </li>
-</div>
 
-<script>
-  let sidebar = document.querySelector(".sidebar");
-  let closeBtn = document.querySelector("#btn");
+  <script>
+    let sidebar = document.querySelector(".sidebar");
+    let closeBtn = document.querySelector("#btn");
 
-  closeBtn.addEventListener("click", () => {
+    closeBtn.addEventListener("click", () => {
       sidebar.classList.toggle("open");
       menuBtnChange();
-  });
+    });
 
-  function menuBtnChange() {
+    function menuBtnChange() {
       if (sidebar.classList.contains("open")) {
-          closeBtn.classList.replace("bx-menu", "bx-menu-alt-right");
+        closeBtn.classList.replace("bx-menu", "bx-menu-alt-right");
       } else {
-          closeBtn.classList.replace("bx-menu-alt-right", "bx-menu");
+        closeBtn.classList.replace("bx-menu-alt-right", "bx-menu");
       }
-  }
-</script>
+    }
+  </script>
 
   <div class="container mt-5 container">
     <h1>EDITAR PERFIL</h1>
@@ -132,9 +131,8 @@
 
       <div class="buttons">
         <div class="col-md-3">
-         
-            <a href="../../index.html"> <button id="primeiro_botao" type="button">CANCELAR</button></a>
-          
+          <a href="../../index.html">
+            <button id="primeiro_botao" type="button">CANCELAR</button></a>
         </div>
 
         <div class="col-md-3">
