adicionando imagem para ocultar a senha quando clicada

--- a/aluno/perfil/editar/index.html
+++ b/aluno/perfil/editar/index.html
@@ -146,13 +146,13 @@
       <div class="col-md-12 lab-inp input-senha">
         <label for="senha" class="form-label">NOVA SENHA</label>
         <input id="senha" type="password" class="form-control senha" required maxlength="255">
-        <img id="show_password" onclick="alternarSenha()" src="img/eye.svg" alt="eye" />
+        <img id="show_password" onclick="alternarVisibilidadeSenha(inputSenha, imgShowPassword)" src="img/eye.svg" alt="eye" />
       </div>
 
       <div class="col-md-12 lab-inp input-senha">
         <label for="confirmar_senha" class="form-label">CONFIRME SUA NOVA SENHA</label>
         <input id="confirmar_senha" type="password" class="form-control senha" required maxlength="255">
-        <img id="show_password1" onclick="alternarSenhaConfirmar()" src="img/eye.svg" alt="eye" />
+        <img id="show_confirm_password" onclick="alternarVisibilidadeSenha(inputConfirmarSenha, imgShowConfirmPassword)" src="img/eye.svg" alt="eye" />
       </div>
       <div class="buttons">
 
