botão de voltar para a tela de perfil da instituição arrumado

--- a/instituicao/perfil/infos_pagamento/index.html
+++ b/instituicao/perfil/infos_pagamento/index.html
@@ -113,8 +113,8 @@
 
       <div class="buttons">
         <div class="col-md-3 primeiro_botao">
-          <a id="botao_voltar">
-            <button id="segundo_botao">VOLTAR</button>
+          <a href="../../index.html">
+            <button id="segundo_botao" type="button">VOLTAR</button>
           </a>
         </div>
         <div class="col-md-3 primeiro_botao">
