arrumando modais da tela de usuários do professor

--- a/instituicao/usuarios/index.html
+++ b/instituicao/usuarios/index.html
@@ -283,8 +283,8 @@
                     </select>
                 </div>
 
-                <div class="col-md-6 lab-inp" id="grupo">
-                    <label for="tipo-select" class="form-label">GRUPO</label>
+                <div class="col-md-12 lab-inp" id="grupo">
+                    <label for="tipo-select" class="form-label">Grupo</label>
                     <select id="edit_user_grupo" class="mul-select" multiple="true">
                         <option value="Cambodia">Cambodia</option>
                         <option value="Khmer">Khmer</option>
@@ -316,7 +316,7 @@
         </div>
 
         <div class="col-md-12 container mt-5 container modal modal-excluir" id="modal-excluir">
-            <h1>DESEJA EXCLUIR ESSE USUARIO?</h1>
+            <h1>DESEJA EXCLUIR ESSE USUÁRIO?</h1>
             <h2>Lembre-se que essa é uma ação irreversível!</h2>
 
             <div class="buttons">
